changes to text

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,18 +7,18 @@
 
   <div class="field">
       <%= f.label :name %><br />
-      <%= f.text_field :name %>
+      <%= f.text_field :name, autofocus: true %>
   </div>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autocomplete: "email" %>
   </div>
 
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em style="position:absolute;right:16px;color:black;">(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
@@ -31,7 +31,7 @@
   <%= recaptcha_v3(action: 'registration') %>
 
   <div class="actions">
-    <%= f.submit "Sign up", class: 'btn-default' %>
+    <%= f.submit "Sign up", class: 'submit-button-login' %>
   </div>
 <% end %>
 
