--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -18,5 +18,7 @@
     }, 3000)
   })
 </script>
+<div class="blur-point top-left"></div>
+<div class="blur-point bottom-right"></div>
 </body>
 </html>
