--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -7,7 +7,7 @@
     </div>
   <% end %>
 
-  <div class="form-group">
+  <div class="">
     <div class="form-input">
       <%= form.text_area :content,
                          class: "comment-textarea",
@@ -16,7 +16,7 @@
     </div>
 
     <div class="form-submit">
-      <%= form.submit "Post", class: "submit-button" %>
+      <%= form.submit "Post", class: "submit-button-login", style: 'margin-top: 15px;' %>
     </div>
   </div>
 <% end %>
