--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -15,6 +15,13 @@
                          rows: 2 %>
     </div>
 
+    <div id="upload-progress-container" class="upload-progress-container" style="display: none;">
+      <div class="upload-progress-bar-outer">
+        <div id="upload-progress-bar" class="upload-progress-bar-inner" style="width: 0%"></div>
+      </div>
+      <div id="upload-progress-text" class="upload-progress-text">0% Uploaded</div>
+    </div>
+
     <div class="form-submit">
       <%= form.submit "Post", class: "submit-button-login", style: 'margin-top: 15px;' %>
     </div>
