--- a/app/assets/stylesheets/comments.css
+++ b/app/assets/stylesheets/comments.css
@@ -33,6 +33,7 @@
     border-top-right-radius: 12px;
     transform: translateY(100%);
     transition: transform 0.3s ease;
+    font-family: "Varela", sans-serif;
 }
 
 @media (min-width: 768px) {
