--- a/app/assets/stylesheets/fold.css
+++ b/app/assets/stylesheets/fold.css
@@ -1,31 +1,31 @@
 body {
-  background: #6a0dad;
-  position: relative;
-  height: 100vh;
-  overflow: hidden;
-  color: white;
-  margin: 0;
+    background: #6a0dad;
+    position: relative;
+    height: 100vh;
+    overflow: hidden;
+    color: white;
+    margin: 0;
+    font-family: "Varela", sans-serif;
 }
 
-
 .blur-point {
-  position: absolute;
-  width: 150px;
-  height: 150px;
-  background: white;
-  filter: blur(80px); /* Blurry effect */
-  border-radius: 50%;
-  opacity: 0.8;
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    background: white;
+    filter: blur(80px); /* Blurry effect */
+    border-radius: 50%;
+    opacity: 0.8;
 }
 
 .top-left {
-  top: -50px;
-  left: -50px;
+    top: -50px;
+    left: -50px;
 }
 
 .bottom-right {
-  bottom: -50px;
-  right: -50px;
+    bottom: -50px;
+    right: -50px;
 }
 
 .screen_header {
