--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag dom_id(post) do %>
   <div class="text-black ml-[20px] mt-[20px] mb-[20px]">
-      <div class="flex mb-[10px] items-center">
+      <div class="flex mb-[10px] items-center relative">
         <div class="post-avatar">
             <% if post.user %>
             <%= link_to user_path(post.user) do %>
@@ -13,7 +13,7 @@
             <% end %>
         </div>
 
-        <div class="ml-[10px]">
+        <div>
             <% if post.user %>
               <%= link_to user_path(post.user) do %>
                 <span class="font-bold"><%= post.user.name %></span>
@@ -81,7 +81,7 @@
          <% end %>
     </div>
 
-    <div class="flex gap-2 pl-5 pt-4">
+    <div class="flex gap-2 pl-5">
       <%= render "posts/like_button", post: post %>
 
       <%= link_to post_comments_path(post),
