--- a/app/views/posts/_like_button.html.erb
+++ b/app/views/posts/_like_button.html.erb
@@ -1,4 +1,4 @@
-<div id="like_button_<%= post.id %>" class="inline-flex items-center">
+<div id="like_button_<%= post.id %>" class="inline-flex items-center h-[20px] w-[40px]">
   <% if post.liked_by?(current_user) %>
     <%= button_to post_like_path(post), method: :delete, class: "bg-transparent border-0 cursor-pointer flex items-center gap-1 p-1.5 liked text-[#ff4b4b] fill-[#ff4b4b]", form: { data: { turbo: true } } do %>
       <svg class="heart-icon filled" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
