--- a/app/views/layouts/full.html.erb
+++ b/app/views/layouts/full.html.erb
@@ -12,7 +12,7 @@
     <%= yield :head %>
 
     <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
-    <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
+    <%= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
 
     <link rel="icon" href="/icon.png" type="image/png">
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
@@ -35,9 +35,9 @@
 
   <body class="relative h-[100vh] overflow-hidden font-[Varela] bg-[#6a0dad] text-white">
       <p class="notice"><%= notice %></p>
-      <% if alert %>
-      <p class="alert max-w-fit ml-auto mr-auto bg-white text-red-400 rounded-3xl px-[20px] py-[10px]">
-        <%= alert %>
+      <% if flash.any? %>
+      <p class="alert max-w-fit ml-auto mr-auto bg-white text-red-400 rounded-3xl px-[20px] py-[10px]" data-turbo-temporary>
+        <%= flash[:alert] %>
       </p>
     <% end %>
     <%= yield %>
