--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -118,6 +118,7 @@
       </g>
     </svg>
   </div>
+    <h1>Test</h1>
 
   <div id="no-more-posts" data-infinite-scroll-target="noMorePosts" class="hidden">
     No more posts to load
