--- a/app/views/layouts/app_with_nav.html.erb
+++ b/app/views/layouts/app_with_nav.html.erb
@@ -42,7 +42,7 @@
 
   <body class="bg-[#6a0dad] relative h-[100vh] overflow-hidden m-0 w-full box-border">
     <%= yield :header %>
-    <div class="fold bg-white">
+    <div class="bg-white text-black pt-5 h-screen px-4 rounded-t-3xl">
     <%= yield %>
     </div>
     <nav class="fixed bottom-0 left-0 right-0 bg-black z-[999]">
