--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -1,7 +1,5 @@
 <% content_for :header do %>
-  <div class="notifications-header" style="display: flex;color:white;">
-    <h2 style="margin-left:auto;margin-right:auto;">Settings</h2>
-  </div>
+  <h2 class="mr-auto ml-auto max-w-fit text-white py-4">Settings</h2>
 <% end %>
 
 <div class="profile-settings-container">
