--- a/app/views/layouts/app_with_nav.html.erb
+++ b/app/views/layouts/app_with_nav.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr" dir="ltr">
   <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-P0VVVF3N5J"></script>
@@ -15,7 +15,7 @@
     <meta name="handheldfriendly" content="true">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="turbo-visit-control" content="reload">
+    <meta name="theme-color" content="#6a0dad" />
 
     <meta property="og:site_name" content="Spreent">
     <meta property="og:title" content="Spreent - Your Sports Community">
