--- a/app/views/layouts/app_with_nav.html.erb
+++ b/app/views/layouts/app_with_nav.html.erb
@@ -23,6 +23,7 @@
     <meta property="og:type" content="website">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= turbo_include_tags %>
 
     <%= yield :head %>
 
