--- a/app/views/layouts/fold_without_bar.html.erb
+++ b/app/views/layouts/fold_without_bar.html.erb
@@ -17,6 +17,7 @@
     <meta name="turbo-visit-control" content="reload">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= turbo_include_tags %>
 
     <%= yield :head %>
 
