--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -86,7 +86,7 @@
 
       <%= link_to post_comments_path(post),
                   data: { turbo_frame: "comments_panel" },
-                  class: "comments-button" do %>
+                  class: "inline-flex h-[20px] w-[40px]" do %>
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
         </svg>
