--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -59,7 +59,7 @@
 
 <hr />
 
-<div class="pl-[20px] flex border-none opacity-100 translate-y-0 transform transition-all duration-300 ease-in-out" data-controller="file-upload" id="dynamic-height-element">
+<div class="pl-[20px] flex border-none opacity-100 translate-y-0 transform transition-all duration-300 ease-in-out" data-controller="file-upload">
 <div class="share-something-avatar">
   <% if current_user.avatar.attached? %>
     <%= image_tag current_user.avatar.variant(resize_to_limit: [50, 50]),
