--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -10,8 +10,8 @@
   <div class="">
     <div class="form-input">
       <%= form.text_area :content,
-                         class: "comment-textarea",
-                         placeholder: "Write a comment...",
+                         class: "comment-textarea w-full",
+                         placeholder: I18n.t('comments.write_a_comment'),
                          rows: 2 %>
     </div>
 
@@ -23,7 +23,7 @@
     </div>
 
     <div class="form-submit">
-      <%= form.submit "Post", class: "submit-button-login", style: 'margin-top: 15px;' %>
+      <%= form.submit I18n.t('comments.publish'), class: "text-white py-[12px] px-[30px] mb-[50px] hover:-translate-y-0.5 hover:shadow-[0_4px_8px_rgba(94,97,231,0.4)] active:translate-y-0.5 active:shadow-[0_1px_3px_rgba(94,97,231,0.4)] transition-all duration-300 ease-in-out rounded-3xl text-xl transition-all duration-300 ease-in-out cursor-pointer ml-auto mr-auto border-none bg-gradient-to-r from-[#5e61e7] to-[#8d7dfa] shadow-[0_2px_5px_rgba(94,97,231,0.3)] mt-10" %>
     </div>
   </div>
 <% end %>
