--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -2,10 +2,10 @@
   <div data-controller="comments">
   <div class="comments-overlay" data-action="click->comments#close"></div>
 
-  <div class="comments-panel">
-    <div class="comments-header">
-      <h2>Comments</h2>
-      <button class="close-button" data-action="click->comments#close">
+  <div class="p-4">
+    <div class="flex">
+      <h2 class="text-2xl"><%= I18n.t('comments.title') %></h2>
+      <button class="absolute right-0 mr-4" data-action="click->comments#close">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M18 6L6 18M6 6l12 12"></path>
         </svg>
@@ -17,12 +17,12 @@
       <div class="drag-indicator" data-action="mousedown->comments#startDrag touchstart->comments#startDrag"></div>
     </div>
 
-    <div class="comments-content">
+    <div class="pb-4">
       <div id="comments">
         <% if @comments.count > 0 %>
         <%= render @comments %>
           <% else %>
-        No comments yet, what say you?
+        <%= I18n.t('comments.no_comments_yet') %>
         <% end %>
       </div>
     </div>
