--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -91,7 +91,7 @@
           <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
         </svg>
           <% if post.comments.count > 0 %>
-          <span><%= post.comments.count %></span>
+          <span class="relative bottom-[2px] left-[3px]"><%= post.comments.count %></span>
           <% end %>
       <% end %>
     </div>
