--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :header do %>
-    <h2 class="mr-auto ml-auto max-w-fit text-white py-4"><%= I18n.t('communities.title') %></h2>
+    <h2 class="mr-auto ml-auto max-w-fit text-white py-4 text-2xl"><%= I18n.t('communities.title') %></h2>
 <% end %>
 
 <div class="bg-white text-black pt-[20px] h-[100vh] px-4 rounded-t-3xl overflow-y-scroll pb-28">
