ajout de texte alternatif

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <div class="max-w-content ml-auto mr-auto pt-[150px] max-w-fit">
-    <%= image_tag "spreent_logo.png" %>
+    <%= image_tag "spreent_logo.png", alt: 'Logo de Spreent' %>
     <h2 class="font-[Varela] text-3xl ml-auto mr-auto max-w-fit pt-[100] pb-[20px]"><%= I18n.t "home.welcome" %></h2>
 
     <span class="ml-auto mr-auto max-w-fit relative left-[30px] bottom-[25px] mb-10 text-2xl"><%= I18n.t "home.your_hub" %></span>
