--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -7,6 +7,8 @@
 
 <div class="max-w-content ml-auto mr-auto pt-[150px] max-w-fit">
     <%= image_tag "spreent_logo.png", alt: 'Logo de Spreent' %>
+    <%= image_tag "mascotte.png", alt: 'Mascotte de Spreent', class: "w-[300px] mr-auto ml-auto pb-[20px]" %>
+
     <h2 class="font-[Varela] text-3xl ml-auto mr-auto max-w-fit pt-[100] pb-[20px]"><%= I18n.t "home.welcome" %></h2>
 
     <span class="ml-auto mr-auto max-w-fit relative left-[30px] bottom-[25px] mb-10 text-2xl"><%= I18n.t "home.your_hub" %></span>
@@ -24,7 +26,7 @@
       hover:bg-white hover:text-black" %>
         <%= link_to invite_path, class: "flex justify-center px-[10px] py-[20px] text-[#3F256A] no-underline bg-white rounded-3xl transition-all duration-300 ease-in-out mt-[20px] text-xl relative" do %>
             <%= I18n.t "home.enter_invitation_code" %>
-            <div class="bg-[#A7A4F5] text-white left-[64px] pl-[7px] pb-[10px] w-[20px] h-[20px] rounded-full text-base ml-[25px]">?</div>
+            <div class="bg-[#A7A4F5] text-white left-[64px] pl-[6px] pb-[10px] mt-[3px] w-[20px] h-[20px] rounded-full text-base ml-[25px]">?</div>
     <% end %>
 </div>
 
